datadog.yaml
apiVersion: v1
kind: Service
metadata:
  name: datadog-service
spec:
  type: ClusterIP
  selector:
    app: datadog
  ports:
  - port: 8126
    targetPort: 8126
    protocol: TCP
